--- a/project/SPTarkov.Launcher/Components/Info/InfoCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Info/InfoCardComponent.razor
@@ -16,7 +16,12 @@
 </MudItem>
 
 @code {
-    [Parameter] public string Name { get; set; }
-    [Parameter] public string Description { get; set; }
-    [Parameter] public string Link { get; set; }
+    [Parameter]
+    public string Name { get; set; }
+
+    [Parameter]
+    public string Description { get; set; }
+
+    [Parameter]
+    public string Link { get; set; }
 }
