--- a/project/SPTarkov.Launcher/Components/PasswordFieldComponent.razor
+++ b/project/SPTarkov.Launcher/Components/PasswordFieldComponent.razor
@@ -1,48 +1,53 @@
 ﻿<MudTextField Immediate="true" @bind-Value="Password" Label="@Title"
-              Variant="Variant.Outlined" Margin="Margin.Dense" InputType="@PasswordInput"
-              Adornment="Adornment.End" AdornmentIcon="@passwordInputIcon" OnAdornmentClick="ChangeAdornment"
+              Variant="Variant.Outlined" Margin="Margin.Dense" InputType="@_passwordInput"
+              Adornment="Adornment.End" AdornmentIcon="@_passwordInputIcon" OnAdornmentClick="ChangeAdornment"
               AdornmentAriaLabel="Show Password" Required="@IsRequired"/>
 
 @code {
-    private string password = "";
+    private string _password = "";
 
     [Parameter]
     public string Password
     {
-        get => password;
+        get => _password;
         set
         {
-            if (password == value)
+            if (_password == value)
             {
                 return;
             }
 
-            password = value;
-            PasswordChanged.InvokeAsync(password);
+            _password = value;
+            PasswordChanged.InvokeAsync(_password);
         }
     }
 
-    [Parameter] public EventCallback<string> PasswordChanged { get; set; }
+    [Parameter]
+    public EventCallback<string> PasswordChanged { get; set; }
 
-    [Parameter] public bool IsRequired { get; set; }
-    [Parameter] public string Title { get; set; } = "Password";
-    private bool isShow;
-    private InputType PasswordInput = InputType.Password;
-    private string passwordInputIcon = Icons.Material.Filled.VisibilityOff;
+    [Parameter]
+    public bool IsRequired { get; set; }
+
+    [Parameter]
+    public string Title { get; set; } = "Password";
+
+    private bool _isShow;
+    private InputType _passwordInput = InputType.Password;
+    private string _passwordInputIcon = Icons.Material.Filled.VisibilityOff;
 
     private void ChangeAdornment()
     {
-        if (isShow)
+        if (_isShow)
         {
-            isShow = false;
-            passwordInputIcon = Icons.Material.Filled.VisibilityOff;
-            PasswordInput = InputType.Password;
+            _isShow = false;
+            _passwordInputIcon = Icons.Material.Filled.VisibilityOff;
+            _passwordInput = InputType.Password;
         }
         else
         {
-            isShow = true;
-            passwordInputIcon = Icons.Material.Filled.Visibility;
-            PasswordInput = InputType.Text;
+            _isShow = true;
+            _passwordInputIcon = Icons.Material.Filled.Visibility;
+            _passwordInput = InputType.Text;
         }
     }
 
