--- a/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsComponent.razor
@@ -36,5 +36,6 @@
 
 
 @code {
-    [Parameter] public MiniProfile MiniProfile { get; set; }
+    [Parameter]
+    public MiniProfile MiniProfile { get; set; }
 }
