--- a/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsSubColComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsSubColComponent.razor
@@ -8,8 +8,15 @@
 
 @code
 {
-    [Parameter] public string P1 { get; set; }
-    [Parameter] public string P1value { get; set; }
-    [Parameter] public string P2 { get; set; }
-    [Parameter] public string P2value { get; set; }
+    [Parameter]
+    public string P1 { get; set; }
+
+    [Parameter]
+    public string P1value { get; set; }
+
+    [Parameter]
+    public string P2 { get; set; }
+
+    [Parameter]
+    public string P2value { get; set; }
 }
