--- a/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDiscordDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDiscordDialog.razor
@@ -1,20 +1,18 @@
-﻿@inject ISnackbar _snackbar
-@inject ForgeHelper _forge
-@inject LogHelper _logHelper
+﻿@inject ISnackbar Snackbar
 
 <MudDialog Class="mud-background-gray border-2 border-solid mud-border-lines-default">
     <DialogContent>
         <MudContainer Class="py-4">
-            @if (requestInProgress)
+            @if (_requestInProgress)
             {
                 <MudContainer Class="d-flex flex-column align-center gap-4">
                     <MudProgressCircular Color="Color.Primary" Indeterminate="true" Size="Size.Large"/>
-                    <MudText>@TaskText</MudText>
+                    <MudText>@_taskText</MudText>
                 </MudContainer>
             }
             else
             {
-                <MudForm Model="request" @bind-IsValid="@success" Class="gap-2 mt-3">
+                <MudForm Model="request" @bind-IsValid="@_success" Class="gap-2 mt-3">
                     <MudTextField Immediate="true" @bind-Value="request.Email" Label="Token" Variant="Variant.Outlined" Margin="Margin.Dense" Required="true"/>
                 </MudForm>
             }
@@ -28,20 +26,21 @@
 </MudDialog>
 
 @code {
-    private bool success;
-    private bool requestInProgress;
-    private string TaskText = "";
+    private bool _success;
+    private bool _requestInProgress;
+    private string _taskText = "";
 
-    [CascadingParameter] private IMudDialogInstance MudDialog { get; set; }
+    [CascadingParameter]
+    private IMudDialogInstance mudDialog { get; set; }
 
     private ForgeLoginRequest request { get; } = new();
     private CancellationTokenSource token { get; set; }
-    private bool UserCancel { get; set; }
+    private bool userCancel { get; set; }
 
     private async Task RunLoginTask()
     {
         var result = false;
-        requestInProgress = true;
+        _requestInProgress = true;
         try
         {
             result = await CallForge("Trying to login", "Failed to login");
@@ -65,14 +64,14 @@
         if (result)
         {
             Submit();
-            requestInProgress = false;
+            _requestInProgress = false;
         }
     }
 
     private async Task<bool> CallForge(string taskText = "", string failString = "")
     {
         token = new CancellationTokenSource(TimeSpan.FromSeconds(10));
-        TaskText = taskText;
+        _taskText = taskText;
         StateHasChanged();
         await Task.Delay(20);
 
@@ -91,28 +90,28 @@
 
     private void Submit()
     {
-        _snackbar.Add($"Logged in to {request.Email}!", Severity.Success);
-        MudDialog.Close();
+        Snackbar.Add($"Logged in to {request.Email}!", Severity.Success);
+        mudDialog.Close();
     }
 
     private void AbortOrFail(string message = "Error connecting to server!")
     {
-        if (!UserCancel)
+        if (!userCancel)
         {
-            _snackbar.Add(message, Severity.Error);
+            Snackbar.Add(message, Severity.Error);
         }
 
         token?.Cancel();
-        MudDialog.Cancel();
-        requestInProgress = false;
+        mudDialog.Cancel();
+        _requestInProgress = false;
     }
 
     private void UserCancelled()
     {
-        UserCancel = true;
-        requestInProgress = false;
+        userCancel = true;
+        _requestInProgress = false;
         token?.Cancel();
-        MudDialog.Cancel();
+        mudDialog.Cancel();
     }
 
 }
