--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -30,3 +30,6 @@
 @using SPTarkov.Launcher.Components.Settings
 @using SPTarkov.Launcher.Components.ForgeManager
 @using SPTarkov.Launcher.Components.Info
+
+@using System.Collections.Specialized
+@using Size = MudBlazor.Size
