--- a/project/SPTarkov.Launcher/Components/Settings/SettingOptionComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Settings/SettingOptionComponent.razor
@@ -11,9 +11,18 @@
 }
 
 @code {
-    [Parameter] public bool Disabled { get; set; }
-    [Parameter] public bool AddDiv { get; set; }
-    [Parameter] public bool Switch { get; set; }
-    [Parameter] public string OptionName { get; set; }
-    [Parameter] public Func<Task> SwitchFunc { get; set; }
+    [Parameter]
+    public bool Disabled { get; set; }
+
+    [Parameter]
+    public bool AddDiv { get; set; }
+
+    [Parameter]
+    public bool Switch { get; set; }
+
+    [Parameter]
+    public string OptionName { get; set; }
+
+    [Parameter]
+    public Func<Task> SwitchFunc { get; set; }
 }
