--- a/project/SPTarkov.Launcher/Components/Settings/SettingsTopPanelComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Settings/SettingsTopPanelComponent.razor
@@ -1,10 +1,7 @@
-﻿@using System.Collections.Specialized
-@using System.Windows
-@using Size = MudBlazor.Size
-@inject LogHelper _logHelper
-@inject ConfigHelper _configHelper
-@inject HttpHelper _httpHelper
-@inject ISnackbar _snackbar
+﻿@inject LogHelper LogHelper
+@inject ConfigHelper ConfigHelper
+@inject HttpHelper HttpHelper
+@inject ISnackbar Snackbar
 
 <MudContainer Class="pa-0 pb-4 d-flex justify-start gap-2">
     <MudButton Color="Color.Primary" Size="Size.Small" Variant="Variant.Filled" OnClick="LoadLiveSettings">Load Live Settings</MudButton>
@@ -18,14 +15,14 @@
 
     private async Task LoadLiveSettings()
     {
-        _logHelper.AddLog("Loading Live Settings");
+        LogHelper.AddLog("Loading Live Settings");
         var eftSettingsFolder = Path.Combine(Environment.GetFolderPath(Environment.SpecialFolder.ApplicationData), "Battlestate Games", "Escape From Tarkov", "Settings");
-        var sptSettingsFolder = Path.Combine(_configHelper.GetConfig().GamePath, "user", "sptsettings");
+        var sptSettingsFolder = Path.Combine(ConfigHelper.GetConfig().GamePath, "user", "sptsettings");
 
         if (!Directory.Exists(eftSettingsFolder))
         {
-            _logHelper.AddLog($"Settings can not be loaded from live, path given: {eftSettingsFolder}");
-            _snackbar.Add("Settings can not be loaded from live, path given", Severity.Error);
+            LogHelper.AddLog($"Settings can not be loaded from live, path given: {eftSettingsFolder}");
+            Snackbar.Add("Settings can not be loaded from live, path given", Severity.Error);
             return;
         }
 
@@ -45,20 +42,20 @@
         }
         catch (Exception e)
         {
-            _logHelper.AddLog("Unable to load live settings");
-            _logHelper.AddLog(e.ToString());
-            _snackbar.Add("Loading live settings failed", Severity.Error);
+            LogHelper.AddLog("Unable to load live settings");
+            LogHelper.AddLog(e.ToString());
+            Snackbar.Add("Loading live settings failed", Severity.Error);
             return;
         }
 
-        _logHelper.AddLog("Loaded live settings to SPTsettings folder");
-        _snackbar.Add("Loaded live settings", Severity.Success);
+        LogHelper.AddLog("Loaded live settings to SPTsettings folder");
+        Snackbar.Add("Loaded live settings", Severity.Success);
     }
 
     private async Task ClearGameSettings()
     {
-        _logHelper.AddLog("clearing game settings");
-        var sptSettings = new DirectoryInfo(Path.Combine(_configHelper.GetConfig().GamePath, "user", "sptsettings"));
+        LogHelper.AddLog("clearing game settings");
+        var sptSettings = new DirectoryInfo(Path.Combine(ConfigHelper.GetConfig().GamePath, "user", "sptsettings"));
 
         try
         {
@@ -68,53 +65,53 @@
         }
         catch (Exception e) when (e is IOException || e is UnauthorizedAccessException)
         {
-            _logHelper.AddLog("Unable to clean game settings, UnauthorizedAccessException or IOException");
-            _logHelper.AddLog(e.ToString());
-            _snackbar.Add("Clearing game settings failed due to Unauthorized Access", Severity.Error);
+            LogHelper.AddLog("Unable to clean game settings, UnauthorizedAccessException or IOException");
+            LogHelper.AddLog(e.ToString());
+            Snackbar.Add("Clearing game settings failed due to Unauthorized Access", Severity.Error);
             return;
         }
         catch (Exception e)
         {
-            _logHelper.AddLog(e.ToString());
-            _logHelper.AddLog("Clearing game settings failed");
-            _snackbar.Add("Clearing game settings failed", Severity.Error);
+            LogHelper.AddLog(e.ToString());
+            LogHelper.AddLog("Clearing game settings failed");
+            Snackbar.Add("Clearing game settings failed", Severity.Error);
             return;
         }
 
-        _logHelper.AddLog("Cleared game settings");
-        _snackbar.Add("Cleared game settings", Severity.Success);
+        LogHelper.AddLog("Cleared game settings");
+        Snackbar.Add("Cleared game settings", Severity.Success);
     }
 
     private async Task CleanTempFiles()
     {
         try
         {
-            var rootdir = new DirectoryInfo(Path.Join(_configHelper.GetConfig().GamePath, "user", "sptappdata"));
+            var rootdir = new DirectoryInfo(Path.Join(ConfigHelper.GetConfig().GamePath, "user", "sptappdata"));
             rootdir.Delete(true);
         }
         catch (Exception e) when (e is IOException or UnauthorizedAccessException)
         {
-            _logHelper.AddLog("Unable to clean temp files, UnauthorizedAccessException or IOException");
-            _logHelper.AddLog(e.ToString());
-            _snackbar.Add("Unable to clean temp files due to Unauthorized Access", Severity.Warning);
+            LogHelper.AddLog("Unable to clean temp files, UnauthorizedAccessException or IOException");
+            LogHelper.AddLog(e.ToString());
+            Snackbar.Add("Unable to clean temp files due to Unauthorized Access", Severity.Warning);
             return;
         }
         catch (Exception e)
         {
-            _logHelper.AddLog("Unable to clean temp files");
-            _logHelper.AddLog(e.ToString());
-            _snackbar.Add("Unable to clean temp files", Severity.Error);
+            LogHelper.AddLog("Unable to clean temp files");
+            LogHelper.AddLog(e.ToString());
+            Snackbar.Add("Unable to clean temp files", Severity.Error);
             return;
         }
 
-        _logHelper.AddLog("Cleaned temp files");
-        _snackbar.Add("Cleaned temp files", Severity.Success);
+        LogHelper.AddLog("Cleaned temp files");
+        Snackbar.Add("Cleaned temp files", Severity.Success);
     }
 
     private async Task CopyLogs()
     {
         var filesToCopy = new List<string>();
-        var path = _configHelper.GetConfig().GamePath;
+        var path = ConfigHelper.GetConfig().GamePath;
         var bepinPath = Path.Combine(path, "BepInEx", "LogOutput.log");
         var serverPath = Path.Combine(path, "user", "logs", $"server-{DateTime.Now:yyyy-MM-dd}.log");
         var launcherPath = Path.Combine(path, "user", "logs", "launcher.log");
@@ -156,14 +153,14 @@
         }
         catch (Exception e)
         {
-            _logHelper.AddLog("Unable to set clipboard with logs");
-            _logHelper.AddLog(e.ToString());
-            _snackbar.Add("Unable to set clipboard with logs", Severity.Error);
+            LogHelper.AddLog("Unable to set clipboard with logs");
+            LogHelper.AddLog(e.ToString());
+            Snackbar.Add("Unable to set clipboard with logs", Severity.Error);
             return;
         }
 
-        _logHelper.AddLog($"Copied {filesToCopy.Count} log/s to clipboard");
-        _snackbar.Add($"Copied {filesToCopy.Count} log{(filesToCopy.Count > 1 ? "s" : "")} to clipboard", Severity.Success);
+        LogHelper.AddLog($"Copied {filesToCopy.Count} log/s to clipboard");
+        Snackbar.Add($"Copied {filesToCopy.Count} log{(filesToCopy.Count > 1 ? "s" : "")} to clipboard", Severity.Success);
     }
 
     private void CopyFilePathsToClipboard(List<string> filePaths)
@@ -180,31 +177,31 @@
         try
         {
             var token = new CancellationTokenSource(TimeSpan.FromSeconds(10));
-            result = await _httpHelper.ForgeLogout(token.Token);
+            result = await HttpHelper.ForgeLogout(token.Token);
         }
         catch (Exception e)
         {
-            _logHelper.AddLog("Exception thrown from SettingsTopPanelComponent.ClearApiKey");
-            _logHelper.AddLog(e.ToString());
+            LogHelper.AddLog("Exception thrown from SettingsTopPanelComponent.ClearApiKey");
+            LogHelper.AddLog(e.ToString());
             return;
         }
 
         if (result is null)
         {
-            _logHelper.LogInfo("Forge ForgeLogout result is null");
+            LogHelper.LogInfo("Forge ForgeLogout result is null");
             return;
         }
 
         if (result.Code == ForgeResponseMessage.Unauthenticated)
         {
-            _logHelper.AddLog("Forge ForgeLogout failed to authenticate");
+            LogHelper.AddLog("Forge ForgeLogout failed to authenticate");
             return;
         }
 
         if (result.Success)
         {
-            _logHelper.AddLog("Forge ForgeLogout Successful");
-            _httpHelper.ClearApiKey();
+            LogHelper.AddLog("Forge ForgeLogout Successful");
+            HttpHelper.ClearApiKey();
         }
     }
 }
