--- a/project/SPTarkov.Launcher/Dialogs/Server/ServerAddDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Server/ServerAddDialog.razor
@@ -1,4 +1,4 @@
-﻿@inject ISnackbar _snackbar
+﻿@inject ISnackbar Snackbar
 
 <MudDialog Class="mud-background-gray border-2 border-solid mud-border-lines-default">
     <DialogContent>
@@ -22,19 +22,20 @@
 
     public Server Server = new();
 
-    [CascadingParameter] private IMudDialogInstance MudDialog { get; set; }
+    [CascadingParameter]
+    private IMudDialogInstance mudDialog { get; set; }
 
     private void Submit()
     {
         Server.ServerId = DateTimeOffset.UtcNow.ToUnixTimeSeconds().ToString();
         Server.Locked = false;
-        _snackbar.Add("Added Server!", Severity.Success);
-        MudDialog.Close(DialogResult.Ok(Server));
+        Snackbar.Add("Added Server!", Severity.Success);
+        mudDialog.Close(DialogResult.Ok(Server));
     }
 
     private void Cancel()
     {
-        MudDialog.Cancel();
+        mudDialog.Cancel();
     }
 
 }
