--- a/project/SPTarkov.Launcher/Pages/ForgePage.razor
+++ b/project/SPTarkov.Launcher/Pages/ForgePage.razor
@@ -1,32 +1,30 @@
 ﻿@page "/ForgePage"
 
-@inject ISnackbar _snackbar
-@inject IDialogService _dialogService
-@inject ForgeHelper _forgeHelper
-@inject HttpHelper _httpHelper
-@inject StateHelper _stateHelper
-@inject ConfigHelper _configHelper
-@inject LogHelper _logHelper
+@inject IDialogService DialogService
+@inject HttpHelper HttpHelper
+@inject StateHelper StateHelper
+@inject ConfigHelper ConfigHelper
+@inject LogHelper LogHelper
 
 <MudContainer Class="px-8 mt-2 mb-6 pa-0" MaxWidth="MaxWidth.Large">
-    @if (_netAvailable && _apiKeyAvailable)
+    @if (netAvailable && apiKeyAvailable)
     {
         <MudItem sm="12" Class="mb-6">
             <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default px-4 pt-4 pb-2">
                 <SearchComponent @bind-Search="Search" @bind-FilterValue="FilterValue" @bind-SortValue="SortValue" @bind-AiValue="AiValue" SearchFunc="@SearchUpdate"/>
 
-                @if (_searchResponse?.Meta?.LastPage is not null && _searchResponse?.Data?.Count > 0)
+                @if (searchResponse?.Meta?.LastPage is not null && searchResponse?.Data?.Count > 0)
                 {
                     <MudItem sm="12" Class="d-flex justify-center">
-                        <MudPagination Rectangular="true" Variant="Variant.Text" Count="@((int)_searchResponse.Meta.LastPage)" Class="mb-4"
-                                       ShowFirstButton="true" ShowLastButton="true" ShowNextButton="true" ShowPreviousButton="true" @bind-Selected="@_paginationSelected"/>
+                        <MudPagination Rectangular="true" Variant="Variant.Text" Count="@((int)searchResponse.Meta.LastPage)" Class="mb-4"
+                                       ShowFirstButton="true" ShowLastButton="true" ShowNextButton="true" ShowPreviousButton="true" @bind-Selected="@paginationSelected"/>
                     </MudItem>
                 }
             </MudCard>
         </MudItem>
     }
 
-    @if (!_netAvailable)
+    @if (!netAvailable)
     {
         <MudItem sm="12">
             <MudAlert Severity="Severity.Info" Variant="Variant.Outlined">No Internet access found, please fix and refresh!</MudAlert>
@@ -35,7 +33,7 @@
             <MudButton Size="Size.Small" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.Refresh" @onclick="CheckInternetAccess">Refresh</MudButton>
         </MudItem>
     }
-    else if (!_apiKeyAvailable)
+    else if (!apiKeyAvailable)
     {
         <MudItem sm="12">
             <MudAlert Severity="Severity.Info" Variant="Variant.Outlined" Dense="true">No API Key found, please follow the instructions below to be able to use Forge!</MudAlert>
@@ -71,17 +69,17 @@
             </MudExpansionPanel>
         </MudExpansionPanels>
     }
-    else if (_searchResponse is null || _searchInProgress)
+    else if (searchResponse is null || searchInProgress)
     {
         <MudGrid>
             <ModCardComponent IsSkeleton="true"/>
             <ModCardComponent IsSkeleton="true"/>
         </MudGrid>
     }
-    else if (_searchResponse?.Data?.Count > 0)
+    else if (searchResponse?.Data?.Count > 0)
     {
         <MudGrid>
-            @foreach (var mod in _searchResponse.Data)
+            @foreach (var mod in searchResponse.Data)
             {
                 <ModCardComponent ForgeMod="@mod"/>
             }
@@ -90,17 +88,18 @@
 </MudContainer>
 
 @code {
-    private bool _netAvailable { get; set; }
-    private bool _apiKeyAvailable { get; set; }
-    private ForgeModsResponse? _searchResponse { get; set; }
-    private bool _searchInProgress { get; set; }
+    private bool netAvailable { get; set; }
+    private bool apiKeyAvailable { get; set; }
+    private ForgeModsResponse searchResponse { get; set; }
+    private bool searchInProgress { get; set; }
+
     private int _selected = 1;
     private string _search = "";
     private string _sortValue = "-created_at";
     private string _filterValue = "Include";
     private string _aiValue = "Exclude";
 
-    private int _paginationSelected
+    private int paginationSelected
     {
         get => _selected;
         set
@@ -156,15 +155,15 @@
 
     protected override void OnInitialized()
     {
-        _netAvailable = _httpHelper.IsInternetAccessAvailable();
-        _apiKeyAvailable = !string.IsNullOrEmpty(_httpHelper.GetApiKey());
+        netAvailable = HttpHelper.IsInternetAccessAvailable();
+        apiKeyAvailable = !string.IsNullOrEmpty(HttpHelper.GetApiKey());
         SearchForMods();
         base.OnInitialized();
     }
 
     private async Task CheckInternetAccess()
     {
-        _netAvailable = _httpHelper.IsInternetAccessAvailable();
+        netAvailable = HttpHelper.IsInternetAccessAvailable();
     }
 
     private async Task SearchUpdate()
@@ -174,46 +173,46 @@
 
     private async Task SearchForMods(int? page = null)
     {
-        _searchInProgress = true;
+        searchInProgress = true;
         if (page is null)
         {
-            page = _stateHelper.CurrentPagination;
+            page = StateHelper.CurrentPagination;
         }
 
         try
         {
             var token = new CancellationTokenSource(TimeSpan.FromSeconds(10));
-            _searchResponse = await _httpHelper.ForgeGetMods(token.Token, Search, SortValue, page ?? 1, FilterValue, AiValue);
+            searchResponse = await HttpHelper.ForgeGetMods(token.Token, Search, SortValue, page ?? 1, FilterValue, AiValue);
         }
         catch (Exception e)
         {
-            _logHelper.AddLog("Exception thrown from ForgeHelper.SearchForMods");
-            _logHelper.AddLog(e.ToString());
+            LogHelper.AddLog("Exception thrown from ForgeHelper.SearchForMods");
+            LogHelper.AddLog(e.ToString());
             return;
         }
 
-        if (!_searchResponse.Success)
+        if (!searchResponse.Success)
         {
-            _configHelper.SetApiKey("");
-            _searchResponse = null;
-            _apiKeyAvailable = false;
+            ConfigHelper.SetApiKey("");
+            searchResponse = null;
+            apiKeyAvailable = false;
         }
 
-        _paginationSelected = page ?? 1;
-        _stateHelper.CurrentPagination = _paginationSelected;
-        _searchInProgress = false;
+        paginationSelected = page ?? 1;
+        StateHelper.CurrentPagination = paginationSelected;
+        searchInProgress = false;
         StateHasChanged();
     }
 
     private async Task StartForgeLoginTask()
     {
-        var dialog = await _dialogService.ShowAsync<ForgeLoginDialog>("ForgeLoginDialog", _configHelper.DialogOptions);
+        var dialog = await DialogService.ShowAsync<ForgeLoginDialog>("ForgeLoginDialog", ConfigHelper.DialogOptions);
         var result = await dialog.Result;
 
         if (result?.Canceled is false)
         {
-            _apiKeyAvailable = true;
-            _logHelper.LogInfo("Saved Apikey");
+            apiKeyAvailable = true;
+            LogHelper.LogInfo("Saved Apikey");
             SearchForMods();
         }
     }
@@ -222,13 +221,13 @@
     // like ping/pong with validation
     private async Task StartForgeDiscordTask()
     {
-        var dialog = await _dialogService.ShowAsync<ForgeDiscordDialog>("ForgeDiscordDialog", _configHelper.DialogOptions);
+        var dialog = await DialogService.ShowAsync<ForgeDiscordDialog>("ForgeDiscordDialog", ConfigHelper.DialogOptions);
         var result = await dialog.Result;
 
         if (result?.Canceled is false)
         {
-            _apiKeyAvailable = true;
-            _logHelper.LogInfo("Saved Apikey");
+            apiKeyAvailable = true;
+            LogHelper.LogInfo("Saved Apikey");
             SearchForMods();
         }
     }
